test/bad/3.cc
int main()
{
    int x, y, z;
    x = 4 + 4.03558;
}